--- a/README
+++ b/README
@@ -7,3 +7,8 @@
 инициализировать нужно вручную (командой yc init)
 Дальше скрипт лезет в снапшоты, получает лист всех, смотрит на дату создания 
 каждого, и удаляет все, что старше заданного возраста.
+
+#take_snapshot.js
+Функция для нативного планировщика задач в Я.Облаке
+Нужно вручную передать FOLDER_ID
+и поместить выполнении функции в крон
